--- a/resources/scss/pages/_local-climate-charts.scss
+++ b/resources/scss/pages/_local-climate-charts.scss
@@ -510,7 +510,7 @@
     outline: none;
   }
   @include medium {
-    order: 1;
+    order: 3;
   }
 
   .explainer-spacer {
